--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@heroicons/react": "^2.2.0",
+    "@prisma/client": "^6.18.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
@@ -21,6 +23,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "prisma": "^6.18.0",
     "tailwindcss": "^4"
   }
 }
