--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ NEXTAUTH_URL=http://localhost:3000
 # Database
 # "true" untuk pakai database, "false" untuk ga pakai
 USE_DATABASE="false"
-# Jika USE_DATABASE=false, DATABASE_URL bisa kosongin ae
+# Jika USE_DATABASE=false, DATABASE_URL bisa di kosongin ae
 DATABASE_URL=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
