--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # Api Anime
 NEXT_PUBLIC_API_URL=https://www.sankavollerei.com/anime/animasu
 NEXTAUTH_URL=http://localhost:3000
+NEXT_AUTH_SECRET=sankanimeisthebest
 
 # Database
 # "true" untuk pakai database, "false" untuk ga pakai
@@ -11,4 +12,3 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-NEXT_AUTH_SECRET=
