--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Api Anime
 NEXT_PUBLIC_API_URL=https://www.sankavollerei.com/anime/animasu
-NEXTAUTH_URL=http://localhost:3000
+# isi dengan domain anda jika di production
+NEXTAUTH_URL=http://localhost:3000 
+# ubah aja biar aman muehehehe
 NEXT_AUTH_SECRET=sankanimeisthebest
 
 # Database
