--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma db push --accept-data-loss && next build --turbopack"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
